package com.devsenior;

public class puntoEco {
    //id, nombre, tipoEcosistema, coordenadas
}
