@startuml EcoQuestClassDiagram

Title ServicioEcoQuest

classDiagram

class Voluntario {
    - String nombre
    - String id
    - List habilidades
    - List<Mision> misionesCompletadas

    + agregarHabilidad(String habilidad)
    + agregarMision(Mision mision)
    }

class Mision {
    - String id
    - String descripcion
    - String ubicacion
    - LocalDate fecha
    - int nivelDeDificultad
    - HashSet<Voluntario> voluntarios
    - Boolean completada

    + completar()

}

class PuntoEco {
    String id
    String nombre
    Enum tipoEcosistema
    String coordenadas
}

class MisionLimpieza{
    int basuraRecogida
}

class MisionPlantacion{
    int arbolesPlantados
}

class MisionEducacion{
    - int personasEducadas
}

class ServicioEcoQuest{
    - HashSet<Voluntarios> voluntarios
    - HashSet<PuntosEcologicos> puntos
    - HashMap<String, Mision> misiones
    - TreeMap<Integer, list<Mision>> misionesPorDificultad
    - LinkedHashMap<int, Mision> misionesOrdenRegistro
    - LinkedHashMap
    - LinkedHashMap
}


Voluntario <-- Mision
Mision <-- Voluntario
Mision <|-- MisionLimpieza
Mision <|-- MisionPlantacion
Mision <|-- MisionEducacion